--- a/week-6-socialmark-uygulamasi/src/assets/style.css
+++ b/week-6-socialmark-uygulamasi/src/assets/style.css
@@ -974,6 +974,9 @@ video {
 .flex-shrink-0 {
   flex-shrink: 0;
 }
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
 
 .grid-cols-8 {
   grid-template-columns: repeat(8, minmax(0, 1fr));
